Changes in version 0.1.0
* Initialised app
* Added import functionality

Changes in version 0.2.0
* Added manipulate functionality
* Added estimate functionality
* Added panel layout customisation