@@ -1,0 +1,40 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\docType{data}
+\name{utils}
+\alias{utils}
+\alias{.import_datasets}
+\alias{.print_message}
+\alias{.check_formula}
+\alias{.check_panel}
+\alias{default_panels}
+\alias{other_panels}
+\alias{.actionbutton_biocstyle}
+\title{Utilities}
+\format{
+An object of class \code{character} of length 7.
+
+An object of class \code{character} of length 5.
+
+An object of class \code{character} of length 1.
+}
+\usage{
+.import_datasets(selection)
+
+.print_message(...)
+
+.check_formula(form, se)
+
+.check_panel(se, panel_list, panel_class, panel_fun, wtext)
+
+default_panels
+
+other_panels
+
+.actionbutton_biocstyle
+}
+\description{
+Helper functions and constants to support the app functionality.
+}
+\keyword{datasets}
+\keyword{internal}
