@@ -6,3 +6,4 @@ Changes in version 0.2.0
 * Added manipulate functionality
 * Added estimate functionality
 * Added panel layout customisation
+* Added unit testing
